--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'enSentiment/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content%}
 <div class="row justify-content-center mb-15">
