--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'enSentiment/base.html' %}
 {% load static %}
 {% block content%}
-<div class="row justify-content-center mb-15">
+<div class="row justify-content-center mb-5">
     <h1 class="text-center"> <strong> ANALYZE SENTIMENT </strong></h1>
     </div>
                         <div class="row align-items-center justify-content-center">
@@ -167,6 +167,7 @@
             daydiff= (new Date($("input[name='ToDate']").val()) - new Date($("input[name='FromDate']").val()))/(1000 * 60 * 60 * 24);
             twtNUM=$('#NofTweets').val();
             waitngTime=((((twtNUM*0.05)+daydiff)+ twtNUM*0.005882)/60).toFixed(2);
+            waitngTime=Math.ceil(waitngTime);
             waitText='May take '+waitngTime.toString()+' Mins. be patient';
             //document.getElementById('waitText').innerHTML= waitText;
             $("#WaitText").text(waitText);
