--- a/enSentiment/templates/result.html
+++ b/enSentiment/templates/result.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'enSentiment/base.html' %}
 {% load static %}
 
 {% block initscripts %}
@@ -7,26 +7,57 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 {% endblock %}
 
 
 {% block content %}
     <div id="content">
         <div class="row justify-content-center mb-8">
-        <h1 class="text-center"> <strong> ANALYSIS RESULT </strong></h1>
+            <h1 class="text-center"> <strong> ANALYSIS RESULT </strong></h1>
         </div>
+        <div class="row justify-content-center mb-8">
+            <h3 class="text-center"> <strong> Of </strong>{{keyword}}</h3>
+        </div>
+        <div class="row justify-content-center mb-5">
+            <h3 class="text-center"> <strong> From </strong>{{FromDate}} <strong> To </strong>{{ToDate}}</h3>
+        </div>
+        
+                <div class="row justify-content-center" style="width: 100%;">
+                    <!-- Column -->
+                    <div class="col-12">
+                        <!-- Line Chart Card -->
+                        <div class="card">
+                            <div class="card-body">
+
+                                <div class="row justify-content-center"> 
+                                        <h3 class="card-title mb-4 text-center">Line Chart of (<strong>{{num_allTweets}} tweets</strong>)</h3>
+                                </div>
+
+                                <div class="row justify-content-center"> 
+                                    <div style="height: 60vh; width: 100%;">      
+                                        <canvas id="line_chart"></canvas>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row justify-content-center">
                     <!-- Column -->
                     <div class="col-lg-8">
                         <!-- Pie Chart Card -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="d-flex no-block">
+                                <div class="row justify-content-center"> 
                                     <div>
-                                        <h5 class="card-title mb-0">Pie Chart of (<strong>{{num_allTweets}} tweets</strong>)</h5>
+                                        <h3 class="card-title mb-0">Pie Chart of (<strong>{{num_allTweets}} tweets</strong>)</h3>
                                     </div>
                                 </div>
-                                <div class="" id="pie_chart" style="height: 355px;"></div>
+                                <div class="row justify-content-center"> 
+                                    <div class="" id="pie_chart" style="height: 355px;"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -38,12 +69,14 @@
                     <div class="col-lg-4">
                         <div class="card">
                             <div class="card-body">
-                                <div class="d-flex no-block">
+                                <div class="row justify-content-center"> 
                                     <div>
-                                        <h5 class="card-title mb-0">WordCloud of (<strong>{{num_posTweets}} positive tweets</strong>)</h5>
+                                        <h3 class="card-title mb-0">WordCloud of (<strong>{{num_posTweets}} positive tweets</strong>)</h3>
                                     </div>
                                 </div>
-                                <div class="" id="pos_words" style="height: 355px;"></div>
+                                <div class="row justify-content-center"> 
+                                  <div class="" id="pos_words" style="height: 355px;"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -53,12 +86,14 @@
                     <div class="col-lg-4">
                         <div class="card">
                             <div class="card-body">
-                                <div class="d-flex no-block">
+                                <div class="row justify-content-center"> 
                                     <div>
-                                        <h5 class="card-title mb-0">WordCloud of (<strong>{{num_negTweets}} Negative tweets</strong>)</h5>
+                                        <h3 class="card-title mb-0">WordCloud of (<strong>{{num_negTweets}} Negative tweets</strong>)</h3>
                                     </div>
                                 </div>
-                                <div class="" id="neg_words" style="height: 355px;"></div>
+                                <div class="row justify-content-center"> 
+                                    <div class="" id="neg_words" style="height: 355px;"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -72,34 +107,34 @@
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="card w-100">
                             <div class="card-body">
-                                <div class="d-flex">
-                                    <div>
-                                        <h5 class="card-title">Top (<strong>4 Positive tweets</strong>)</h5>
-                                    </div>
+                                <div class="row justify-content-center"> 
+                                        <h3 class="card-title">Top (<strong>4 Positive tweets</strong>)</h3>
                                 </div>
-                                <div class="table-responsive">
-                                    <table class="table vm no-th-brd pro-of-month">
-                                        <thead>
-                                            <tr>
-                                                <th>Tweet</th>
-                                                <th>Puplished Date</th>
-                                                <th>Link</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                        {% for row in top_posDF %}
-                                            <tr>
-                                                <td >
-                                                    <h6>{{row.orginalTweet}}</h6>
-                                                </td>
-                                                <td>{{row.date}}</td>
-                                                <td> <a href="{{row.link}}"><button type="button" class="btn btn-primary ml-auto mr-1">
-                                                    OrginalTweet
-                                                    </button></a></td>
-                                            </tr>
-                                        {% endfor %}
-                                        </tbody>
-                                    </table>
+                                <div class="row justify-content-center"> 
+                                    <div class="table-responsive">
+                                        <table class="table vm no-th-brd pro-of-month">
+                                            <thead>
+                                                <tr>
+                                                    <th>Tweet</th>
+                                                    <th>Puplished Date</th>
+                                                    <th>Link</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for row in top_posDF %}
+                                                <tr>
+                                                    <td >
+                                                        <h6>{{row.orginalTweet}}</h6>
+                                                    </td>
+                                                    <td>{{row.date}}</td>
+                                                    <td> <a href="{{row.link}}"><button type="button" class="btn btn-primary ml-auto mr-1">
+                                                        OrginalTweet
+                                                        </button></a></td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -110,34 +145,34 @@
                             <div class="col-lg-6 d-flex align-items-stretch">
                                 <div class="card w-100">
                                     <div class="card-body">
-                                        <div class="d-flex">
-                                            <div>
-                                                <h5 class="card-title">Top (<strong>4 Negative tweets</strong>)</h5>
-                                            </div>
+                                        <div class="row justify-content-center"> 
+                                                <h3 class="card-title">Top (<strong>4 Negative tweets</strong>)</h3>
                                         </div>
-                                        <div class="table-responsive">
-                                            <table class="table vm no-th-brd pro-of-month">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Tweet</th>
-                                                        <th>Puplished Date</th>
-                                                        <th>Link</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                {% for row in top_negDF%}
-                                                    <tr>
-                                                        <td >
-                                                            <h6>{{row.orginalTweet}}</h6>
-                                                        </td>
-                                                        <td>{{row.date}}</td>                                            
-                                                        <td> <a href="{{row.link}}"><button type="button" class="btn btn-primary ml-auto mr-1">
-                                                            OrginalTweet
-                                                            </button></a></td>
-                                                    </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
+                                        <div class="row justify-content-center"> 
+                                            <div class="table-responsive">
+                                                <table class="table vm no-th-brd pro-of-month">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Tweet</th>
+                                                            <th>Puplished Date</th>
+                                                            <th>Link</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    {% for row in top_negDF%}
+                                                        <tr>
+                                                            <td >
+                                                                <h6>{{row.orginalTweet}}</h6>
+                                                            </td>
+                                                            <td>{{row.date}}</td>                                            
+                                                            <td> <a href="{{row.link}}"><button type="button" class="btn btn-primary ml-auto mr-1">
+                                                                OrginalTweet
+                                                                </button></a></td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -194,7 +229,7 @@
           negCloud.draw();
         });
     </script>
-    
+
 {% endblock %}
 
 {% block endScript%}
@@ -212,13 +247,60 @@
             useCORS: true,
             scale: 1,
         }).then(canvas => {
-            var img =canvas.toDataURL("image/jpeg",1.0);
+            var img =canvas.toDataURL("image/jpeg");
             var doc = new jsPDF();
-            doc.addImage(img,'jpeg',0,5,210,205)
+            const imgProps= doc.getImageProperties(img);
+            const pdfWidth = (imgProps.width * doc.internal.pageSize.getHeight()) / imgProps.height; 
+            const pdfHeight = doc.internal.pageSize.getHeight();
+            doc.addImage(img,'jpeg',20,0,pdfWidth,pdfHeight)
             doc.save("MyAnalysis_Result.pdf")
         })
         
 
     }
+</script>
+<script>
+    // setup 
+    const data = {
+      labels: {{datesLabel|safe}},
+      datasets: [{
+        label: 'Positive',
+        data: {{num_posDate|safe}},
+        borderColor: ['rgba(75, 128, 64, 1)'],
+        fill: false,
+        borderWidth: 1.5,
+        tension: 0.3
+      },
+      {
+        label: 'Negative',
+        data: {{num_negDate|safe}},
+        borderColor: ['rgba(168, 62, 52, 1)'],
+        fill: false,
+        borderWidth: 1.5,
+        tension: 0.3
+      }]
+    };
+
+    // config 
+    const config = {
+      type: 'line',
+      data,
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        },
+        responsive: true,
+        maintainAspectRatio: false,
+      }
+    };
+
+    // render init block
+    const myChart = new Chart(
+      document.getElementById('line_chart'),
+      config
+    );
+
 </script>
 {% endblock %}
