--- a/enSentiment/templates/Email.html
+++ b/enSentiment/templates/Email.html
@@ -40,10 +40,10 @@
                     <div class="card text-center">
                         <div class="card-body">
                           <h5 class="card-title"><b>
-                            <img src="164.92.155.70{% static '/assets/images/First-MLSAlogo.png' %}" style="width: 45px; height: 50px;" alt="homepage" class="dark-logo" />
+                            <img src="http://localhost:8000{% static '/assets/images/First-MLSAlogo.png' %}" style="width: 45px; height: 50px;" alt="homepage" class="dark-logo" />
                             </b>
                             <span>
-                            <img src="164.92.155.70{% static '/assets/images/MLSA_on_COVID_Reviewslogo_text.png' %}" alt="" class="dark-logo" />
+                            <img src="http://localhost:8000{% static '/assets/images/MLSA_on_COVID_Reviewslogo_text.png' %}" alt="" class="dark-logo" />
                             </span></h5>
                           <h2 class="card-text">Hey<strong> {{user.first_name}},</strong></h2>
                           <h3> We are glad you are using our sentiment analyzer.<br><br>We'd like to let you know that the analysis result you requested for {{num_allTweets}} Tweets is ready, <br> and you can view it on the My Results page.</h3>
