--- a/enSentiment/templates/aboutus.html
+++ b/enSentiment/templates/aboutus.html
@@ -1,12 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-                    
-                        <div class="card text-center" style="width: 18rem; margin: auto;">
-                            <div class="card-body">
-                            <H4 class="text-themecolor" style="font-weight: bold;">Who we are?</H4>
-                            <h6>We are Computer Sciences Student  who Try to build Sentiment Analyzer website for GP</h6>
-                            </div>
-                        </div>        
+                
+                    <div class="row justify-content-center">
+                        <div class="col-8">
+                            <div class="card text-center" >
+                                <div class="card-body">
+                                    <h1 class="text-themecolor" style="font-weight: bold;">Who we are?</h1>
+                                    <h3>
+                                        We are a group of computer science students who have been studying together for the last five years. 
+                                        We are graduating this year and we would like to present our project to you. We have built a sentiment
+                                        analyzer website that can analyze the sentiment of any given text that related to covid-19 vaccines in 
+                                        just a short period of time. It has been designed to be as easy as possible to use.
+                                        <br><br>
+                                    </h3>
+                                    <h4>Graduated in June 2022</h4>
+                                </div>
+                            </div>     
+                        </div>
+                    </div>
+
                                
 {% endblock %}
