--- a/enSentiment/templates/aboutus.html
+++ b/enSentiment/templates/aboutus.html
@@ -6,7 +6,7 @@
                         <div class="col-8">
                             <div class="card text-center" >
                                 <div class="card-body">
-                                    <h1 class="text-themecolor" style="font-weight: bold;">Who we are?</h1>
+                                    <h1 class="text-themecolor" style="font-weight: bold;">Who are we?</h1>
                                     <h3>
                                         We are a group of computer science students who have been studying together for the last five years. 
                                         We are graduating this year and we would like to present our project to you. We have built a sentiment
