Change riyadh to riyad

--- a/enSentiment/templates/base.html
+++ b/enSentiment/templates/base.html
@@ -254,7 +254,7 @@
             <!-- ============================================================== -->
             <!-- footer -->
             <!-- ============================================================== -->
-            <footer class="footer"> © 2022 MLSA Saad Riyadh Fawzan </footer>
+            <footer class="footer"> © 2022 MLSA Saad Riyad Fawzan </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
             <!-- ============================================================== -->
