add all tweets page

--- a/enSentiment/templates/result.html
+++ b/enSentiment/templates/result.html
@@ -180,10 +180,23 @@
                 {% endif %}
                 </div>
     </div>
+
+    <div class="row justify-content-center mt-2">
+        <h4>To Save a summary of Anlaysis result click "To PDF"</h4>
+    </div>
     <div class="row justify-content-center">
         <button type="button" id="pdfbtn" onclick="savePDF()" class="btn btn-primary mr-1"><i class="fa fa-file-pdf-o"></i>
             To PDF
-        </button></div>
+        </button>
+    </div>
+    <div class="row justify-content-center mt-4">
+        <h4>To see all analysis tweets click "All Tweets"</h4>
+    </div>
+    <div class="row justify-content-center">
+        <a href="/allTweets"><button type="button"  class="btn btn-primary mr-1">
+            All Tweets
+        </button></a>
+    </div>  
 
     <!-- PIE Chart Script -->
     <script>
