--- a/enSentiment/templates/Email.html
+++ b/enSentiment/templates/Email.html
@@ -47,11 +47,11 @@
                             </span></h5>
                           <h2 class="card-text">Hey<strong> {{user.first_name}},</strong></h2>
                           <h3> We are glad you are using our sentiment analyzer.<br><br>We'd like to let you know that the analysis result you requested for {{num_allTweets}} Tweets is ready, <br> and you can view it on the My Results page.</h3>
-                          <a href="http://localhost:8000/myresults" class="btn btn-primary">Go to My result</a>
+                          <a href="164.92.155.70/myresults" class="btn btn-primary">Go to My result</a>
                             <h3>Thank you for trusting us, and we hope you like our website.</h3>
                         </div>
                         <div class="card-footer text-muted">
-                            © 2022 MLSA Saad Riyadh Fawzan
+                            © 2022 MLSA Saad Riyad Fawzan
                         </div>
                       </div>
                    
