remove fade form analysing popup

--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -72,7 +72,7 @@
                         </div>  
                         
                         <!-- Lodaing Modal -->
-                        <div class="modal fade" id="loaderModal">
+                        <div class="modal" id="loaderModal">
                             <div class="modal-dialog modal-dialog-centered">
                             <div id='modalconent' class="modal-content">
   
