sprete date validation from nomoftweets validation

--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -120,7 +120,7 @@
             $("#numERROR").text(errorTXT);
             $('#submit_info').prop('disabled', true);     
         }
-        if((numOftweets < daydiff))
+        else if((numOftweets < daydiff))
         {
             $('#NofTweets').addClass(" is-invalid");
             $("#numERROR").css("display", "inline-block");
