add new html input date with validation script

--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -28,24 +28,22 @@
                                                 <div class="col-6">
                                                 <label for="FromDate">From</label>
                                                 <div class="input-group date">
-                                                    <!-- name="datetimepicker5" -->
-                                                    <input type="text" id="datetimepicker1" class="form-control" name="FromDate" required readonly>
-                                                    <div class="invalid-feedback">
-                                                        Please choose a Date.
-                                                      </div>
+                                                    <input name="FromDate" type="date" class="form-control" onkeydown="return false">
+
+                                                    {% comment %} <input type="text" id="datetimepicker1" class="form-control" name="FromDate" readonly>
                                                 <div class="input-group-addon input-group-prepend">
                                                     <span class="input-group-text"><i class="fas fa-calendar"></i></span>
-                                                </div>
+                                                </div> {% endcomment %}
                                                 </div>
                                                 </div>
 
                                                 <div class="col-6">
                                                     <label for="ToDate">To</label>
                                                     <div class="input-group date">
-                                                        <input type="text" id="datetimepicker2" class="form-control" name="ToDate" required readonly>
+                                                        {% comment %} <input type="text" id="datetimepicker2" class="form-control" name="ToDate" readonly>
                                                     <div class="input-group-addon input-group-prepend">
                                                         <span class="input-group-text"><i class="fas fa-calendar"></i></span>
-                                                    </div>
+                                                    </div> {% endcomment %}
                                                     </div>
                                                     </div>
                                             </div>
@@ -279,26 +277,30 @@
         });
 </script>
 
-<!-- <script>
-// Example starter JavaScript for disabling form submissions if there are invalid fields
-(function() {
-  'use strict';
-  window.addEventListener('load', function() {
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    var forms = document.getElementsByClassName('needs-validation');
-    // Loop over them and prevent submission
-    var validation = Array.prototype.filter.call(forms, function(form) {
-      form.addEventListener('submit', function(event) {
-        if (form.checkValidity() === false) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-        form.classList.add('was-validated');
-      }, false);
-    });
-  }, false);
-})();
-</script>  -->
+{% comment %} ########## NEW SCRIPT FOR DATE INPUT############### {% endcomment %}
+<script>
+    function pad2(n) {
+        return (n < 10 ? '0' : '') + n;
+      }
+    var date = new Date();
+    var month = pad2(date.getMonth()+1);//months (0-11)
+    var day = pad2(date.getDate());//day (1-31)
+    var year= date.getFullYear();
+    var maxDate =  year+"-"+month+"-"+day;
+
+    $("input[name='FromDate']").attr('min','2020-01-01');
+    $("input[name='FromDate']").attr('max',maxDate);
+
+    $("input[name='FromDate']").change(function(){
+        FromDate=$("input[name='FromDate']").val();
+
+        $("input[name='ToDate']").prop('disabled', false);
+        $("input[name='ToDate']").attr('value',FromDate);
+        $("input[name='ToDate']").attr('min',FromDate);
+        $("input[name='ToDate']").attr('max',maxDate);
+
+    })
+</script>
 
 <!-- Adding validation scripts -->
 <script>
