add new html input date with validation script

--- a/enSentiment/templates/home.html
+++ b/enSentiment/templates/home.html
@@ -40,6 +40,7 @@
                                                 <div class="col-6">
                                                     <label for="ToDate">To</label>
                                                     <div class="input-group date">
+                                                        <input name="ToDate" type="date" class="form-control" onkeydown="return false" disabled>
                                                         {% comment %} <input type="text" id="datetimepicker2" class="form-control" name="ToDate" readonly>
                                                     <div class="input-group-addon input-group-prepend">
                                                         <span class="input-group-text"><i class="fas fa-calendar"></i></span>
